edit country stats

--- a/09_Plotly.ipynb
+++ b/09_Plotly.ipynb
@@ -3588,16 +3588,485 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 163,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Price_to_rating</th>\n",
+       "      <th>Wine_Count</th>\n",
+       "      <th>Tannin_Mean</th>\n",
+       "      <th>Acidity_Mean</th>\n",
+       "      <th>Intensity_Mean</th>\n",
+       "      <th>Sweetness_Mean</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Price_Rating</th>\n",
+       "      <th>ave_growing_temp</th>\n",
+       "      <th>Statistics</th>\n",
+       "      <th>Color</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>0.006615</td>\n",
+       "      <td>4796</td>\n",
+       "      <td>3.02</td>\n",
+       "      <td>3.13</td>\n",
+       "      <td>4.01</td>\n",
+       "      <td>1.37</td>\n",
+       "      <td>45.86</td>\n",
+       "      <td>3.91</td>\n",
+       "      <td>11.73</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Best Value &lt;br&gt;Most Sweet</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>0.004225</td>\n",
+       "      <td>4877</td>\n",
+       "      <td>3.55</td>\n",
+       "      <td>3.57</td>\n",
+       "      <td>4.47</td>\n",
+       "      <td>1.06</td>\n",
+       "      <td>57.56</td>\n",
+       "      <td>3.96</td>\n",
+       "      <td>14.54</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Least Intense &lt;br&gt;Least Sweet</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Canada</td>\n",
+       "      <td>0.005403</td>\n",
+       "      <td>1408</td>\n",
+       "      <td>3.41</td>\n",
+       "      <td>3.60</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>38.54</td>\n",
+       "      <td>3.86</td>\n",
+       "      <td>9.99</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Least Tannic, &lt;br&gt;Least Acidic</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Chile</td>\n",
+       "      <td>0.005486</td>\n",
+       "      <td>2196</td>\n",
+       "      <td>2.86</td>\n",
+       "      <td>2.83</td>\n",
+       "      <td>4.34</td>\n",
+       "      <td>1.05</td>\n",
+       "      <td>58.02</td>\n",
+       "      <td>3.84</td>\n",
+       "      <td>15.12</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Worst Value! &lt;br&gt;Most Acidic</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>France</td>\n",
+       "      <td>0.002702</td>\n",
+       "      <td>27271</td>\n",
+       "      <td>3.52</td>\n",
+       "      <td>3.96</td>\n",
+       "      <td>3.76</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>149.05</td>\n",
+       "      <td>4.06</td>\n",
+       "      <td>36.75</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Most Popular</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Italy</td>\n",
+       "      <td>0.003979</td>\n",
+       "      <td>35999</td>\n",
+       "      <td>3.56</td>\n",
+       "      <td>3.57</td>\n",
+       "      <td>3.70</td>\n",
+       "      <td>1.26</td>\n",
+       "      <td>78.04</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>19.49</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Highest Intensity</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>0.005678</td>\n",
+       "      <td>2162</td>\n",
+       "      <td>3.72</td>\n",
+       "      <td>3.12</td>\n",
+       "      <td>4.59</td>\n",
+       "      <td>1.08</td>\n",
+       "      <td>59.30</td>\n",
+       "      <td>3.94</td>\n",
+       "      <td>15.04</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Most Tannic</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>0.004839</td>\n",
+       "      <td>7927</td>\n",
+       "      <td>3.90</td>\n",
+       "      <td>3.63</td>\n",
+       "      <td>4.18</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>67.45</td>\n",
+       "      <td>3.96</td>\n",
+       "      <td>17.02</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Most Tannic</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>0.004670</td>\n",
+       "      <td>29775</td>\n",
+       "      <td>3.32</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>4.23</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>117.16</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>28.55</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Highest Rated</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Country  Price_to_rating  Wine_Count  Tannin_Mean  Acidity_Mean   \n",
+       "0      Argentina         0.006615        4796         3.02          3.13  \\\n",
+       "1      Australia         0.004225        4877         3.55          3.57   \n",
+       "2         Canada         0.005403        1408         3.41          3.60   \n",
+       "3          Chile         0.005486        2196         2.86          2.83   \n",
+       "4         France         0.002702       27271         3.52          3.96   \n",
+       "5          Italy         0.003979       35999         3.56          3.57   \n",
+       "6       Portugal         0.005678        2162         3.72          3.12   \n",
+       "7          Spain         0.004839        7927         3.90          3.63   \n",
+       "8  United States         0.004670       29775         3.32          3.36   \n",
+       "\n",
+       "   Intensity_Mean  Sweetness_Mean   Price  Rating  Price_Rating   \n",
+       "0            4.01            1.37   45.86    3.91         11.73  \\\n",
+       "1            4.47            1.06   57.56    3.96         14.54   \n",
+       "2            3.47            1.00   38.54    3.86          9.99   \n",
+       "3            4.34            1.05   58.02    3.84         15.12   \n",
+       "4            3.76            1.03  149.05    4.06         36.75   \n",
+       "5            3.70            1.26   78.04    4.00         19.49   \n",
+       "6            4.59            1.08   59.30    3.94         15.04   \n",
+       "7            4.18            1.00   67.45    3.96         17.02   \n",
+       "8            4.23            1.09  117.16    4.10         28.55   \n",
+       "\n",
+       "   ave_growing_temp                      Statistics  Color  \n",
+       "0                20       Best Value <br>Most Sweet      1  \n",
+       "1                21   Least Intense <br>Least Sweet      1  \n",
+       "2                17  Least Tannic, <br>Least Acidic      1  \n",
+       "3                17    Worst Value! <br>Most Acidic      1  \n",
+       "4                19                    Most Popular      1  \n",
+       "5                21               Highest Intensity      1  \n",
+       "6                19                     Most Tannic      1  \n",
+       "7                22                     Most Tannic      1  \n",
+       "8                20                   Highest Rated      1  "
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "merged_df['Statistics'] = ['Best Value <br>Most Sweet', '<br>Least Intense <br>Least Sweet', 'Least Tannic, <br>Least Acidic', 'Worst Value! <br>Most Acidic', 'Most Popular', 'Highest Intensity', 'Most Tannic', 'Most Tannic', 'Highest Rated']"
+    "merged_df = merged_df.reset_index(drop = True)\n",
+    "merged_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df['Statistics'] = ['Best Value <br>Most Sweet', \"Down Unda\", 'Least Intense <br>Least Sweet', 'Least Tannic, <br>Least Acidic', 'Worst Value! <br>Most Acidic', 'Most Popular', 'Highest Intensity', 'Most Tannic', 'Highest Rated']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Price_to_rating</th>\n",
+       "      <th>Wine_Count</th>\n",
+       "      <th>Tannin_Mean</th>\n",
+       "      <th>Acidity_Mean</th>\n",
+       "      <th>Intensity_Mean</th>\n",
+       "      <th>Sweetness_Mean</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Price_Rating</th>\n",
+       "      <th>ave_growing_temp</th>\n",
+       "      <th>Statistics</th>\n",
+       "      <th>Color</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>0.006615</td>\n",
+       "      <td>4796</td>\n",
+       "      <td>3.02</td>\n",
+       "      <td>3.13</td>\n",
+       "      <td>4.01</td>\n",
+       "      <td>1.37</td>\n",
+       "      <td>45.86</td>\n",
+       "      <td>3.91</td>\n",
+       "      <td>11.73</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Best Value &lt;br&gt;Most Sweet</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>0.004225</td>\n",
+       "      <td>4877</td>\n",
+       "      <td>3.55</td>\n",
+       "      <td>3.57</td>\n",
+       "      <td>4.47</td>\n",
+       "      <td>1.06</td>\n",
+       "      <td>57.56</td>\n",
+       "      <td>3.96</td>\n",
+       "      <td>14.54</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Down Unda</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Canada</td>\n",
+       "      <td>0.005403</td>\n",
+       "      <td>1408</td>\n",
+       "      <td>3.41</td>\n",
+       "      <td>3.60</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>38.54</td>\n",
+       "      <td>3.86</td>\n",
+       "      <td>9.99</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Least Intense &lt;br&gt;Least Sweet</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Chile</td>\n",
+       "      <td>0.005486</td>\n",
+       "      <td>2196</td>\n",
+       "      <td>2.86</td>\n",
+       "      <td>2.83</td>\n",
+       "      <td>4.34</td>\n",
+       "      <td>1.05</td>\n",
+       "      <td>58.02</td>\n",
+       "      <td>3.84</td>\n",
+       "      <td>15.12</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Least Tannic, &lt;br&gt;Least Acidic</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>France</td>\n",
+       "      <td>0.002702</td>\n",
+       "      <td>27271</td>\n",
+       "      <td>3.52</td>\n",
+       "      <td>3.96</td>\n",
+       "      <td>3.76</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>149.05</td>\n",
+       "      <td>4.06</td>\n",
+       "      <td>36.75</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Worst Value! &lt;br&gt;Most Acidic</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Italy</td>\n",
+       "      <td>0.003979</td>\n",
+       "      <td>35999</td>\n",
+       "      <td>3.56</td>\n",
+       "      <td>3.57</td>\n",
+       "      <td>3.70</td>\n",
+       "      <td>1.26</td>\n",
+       "      <td>78.04</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>19.49</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Most Popular</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>0.005678</td>\n",
+       "      <td>2162</td>\n",
+       "      <td>3.72</td>\n",
+       "      <td>3.12</td>\n",
+       "      <td>4.59</td>\n",
+       "      <td>1.08</td>\n",
+       "      <td>59.30</td>\n",
+       "      <td>3.94</td>\n",
+       "      <td>15.04</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Highest Intensity</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>0.004839</td>\n",
+       "      <td>7927</td>\n",
+       "      <td>3.90</td>\n",
+       "      <td>3.63</td>\n",
+       "      <td>4.18</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>67.45</td>\n",
+       "      <td>3.96</td>\n",
+       "      <td>17.02</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Most Tannic</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>0.004670</td>\n",
+       "      <td>29775</td>\n",
+       "      <td>3.32</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>4.23</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>117.16</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>28.55</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Highest Rated</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Country  Price_to_rating  Wine_Count  Tannin_Mean  Acidity_Mean   \n",
+       "0      Argentina         0.006615        4796         3.02          3.13  \\\n",
+       "1      Australia         0.004225        4877         3.55          3.57   \n",
+       "2         Canada         0.005403        1408         3.41          3.60   \n",
+       "3          Chile         0.005486        2196         2.86          2.83   \n",
+       "4         France         0.002702       27271         3.52          3.96   \n",
+       "5          Italy         0.003979       35999         3.56          3.57   \n",
+       "6       Portugal         0.005678        2162         3.72          3.12   \n",
+       "7          Spain         0.004839        7927         3.90          3.63   \n",
+       "8  United States         0.004670       29775         3.32          3.36   \n",
+       "\n",
+       "   Intensity_Mean  Sweetness_Mean   Price  Rating  Price_Rating   \n",
+       "0            4.01            1.37   45.86    3.91         11.73  \\\n",
+       "1            4.47            1.06   57.56    3.96         14.54   \n",
+       "2            3.47            1.00   38.54    3.86          9.99   \n",
+       "3            4.34            1.05   58.02    3.84         15.12   \n",
+       "4            3.76            1.03  149.05    4.06         36.75   \n",
+       "5            3.70            1.26   78.04    4.00         19.49   \n",
+       "6            4.59            1.08   59.30    3.94         15.04   \n",
+       "7            4.18            1.00   67.45    3.96         17.02   \n",
+       "8            4.23            1.09  117.16    4.10         28.55   \n",
+       "\n",
+       "   ave_growing_temp                      Statistics  Color  \n",
+       "0                20       Best Value <br>Most Sweet      1  \n",
+       "1                21                       Down Unda      1  \n",
+       "2                17   Least Intense <br>Least Sweet      1  \n",
+       "3                17  Least Tannic, <br>Least Acidic      1  \n",
+       "4                19    Worst Value! <br>Most Acidic      1  \n",
+       "5                21                    Most Popular      1  \n",
+       "6                19               Highest Intensity      1  \n",
+       "7                22                     Most Tannic      1  \n",
+       "8                20                   Highest Rated      1  "
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -3616,27 +4085,27 @@
           ],
           [
            "Australia",
-           "<br>Least Intense <br>Least Sweet"
+           "Down Unda"
           ],
           [
            "Canada",
-           "Least Tannic, <br>Least Acidic"
+           "Least Intense <br>Least Sweet"
           ],
           [
            "Chile",
-           "Worst Value! <br>Most Acidic"
+           "Least Tannic, <br>Least Acidic"
           ],
           [
            "France",
-           "Most Popular"
+           "Worst Value! <br>Most Acidic"
           ],
           [
            "Italy",
-           "Highest Intensity"
+           "Most Popular"
           ],
           [
            "Portugal",
-           "Most Tannic"
+           "Highest Intensity"
           ],
           [
            "Spain",
