Small changes to some markdowns

--- a/02_Popular_Wines.ipynb
+++ b/02_Popular_Wines.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "# Popular Wines\n",
-    "This code initialized the first dataframes, pulling lat/long coordinates, districts and regions for each producer. Then filtering the wines based on internal criterias"
+    "This code initialized the first dataframes, pulling lat/long coordinates, districts and regions for each producer. Then filtering the wines based on internal criterias\n",
+    "\n",
+    "## Import Packages"
    ]
   },
   {
@@ -245,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,8 +343,7 @@
     "    popular_wines.reset_index(inplace = True)\n",
     "\n",
     "    #------------------------------------------------------------------------------------------------------------#\n",
-    "    #Goes through the top countries, regions within those countries, and top winetype within that region \n",
-    "    #Pulls the producers of that winetype, and takes a mean of them, returning the top 5 from that mean\n",
+    "    #Goes through the top countries, regions within those countries, and top winetype within that region pulling the top producer\n",
     "    \n",
     "    new_rows = []\n",
     "    for index, row in popular_wines.iterrows():\n",
@@ -661,14 +662,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Code Running Section\n"
+    "---\n",
+    "## Code Running Section\n",
+    "\n",
+    "Change file_path to fit local repository\n"
    ]
   },
   {
@@ -746,7 +743,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Wine Data For a All Bottles"
+    "### Wine Data For a All Bottles\n",
+    "- Grabs all the bottles for a district"
    ]
   },
   {
