--- a/03_Weather_Data.ipynb
+++ b/03_Weather_Data.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "# Weather Data\n",
-    "This code connects to a global weather website, pulling relevant hourly weather statistics for specific locations. This is then formated into daily data for each of the specified producers pulled from Popular_Wines"
+    "This code connects to a global weather website, pulling relevant hourly weather statistics for specific locations. This is then formated into daily data for each of the specified producers pulled from Popular_Wines\n",
+    "\n",
+    "## Import Packages"
    ]
   },
   {
@@ -301,7 +303,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Weather Dataset for First Set of Bottles"
+    "### Weather Dataset for First Set of Bottles\n",
+    "- This weather data is used for training dataset 1 and 2, since dataset 2 is the same districts, simply more bottles"
    ]
   },
   {
