--- a/04_Training_Dataset.ipynb
+++ b/04_Training_Dataset.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "# Training Data\n",
-    "This code formats and creates the training datasets. Vintage data for each of the popular bottles is pulled, so each bottle will have roughly 23 years of rating data. Weather data is then added for each bottle for each year and formated into monthly data. The final format will see a unique producer and winetype have vintage data extended across each year, with a unique rating and weather data for each. "
+    "This code formats and creates the training datasets. Vintage data for each of the popular bottles is pulled, so each bottle will have roughly 23 years of rating data. Weather data is then added for each bottle for each year and formated into monthly data. The final format will see a unique producer and winetype have vintage data extended across each year, with a unique rating and weather data for each. \n",
+    "\n",
+    "## Import Packages"
    ]
   },
   {
