--- a/05_Machine_Leaning_Model.ipynb
+++ b/05_Machine_Leaning_Model.ipynb
@@ -14,6 +14,8 @@
     "\n",
     "Model 1 takes in training dataset 1. This data is filtered to take the most popular producers filtering by country, region, district, and winetype. Taking the most popular at each level. This initial model will focus on checking the relationship between weather data and rating. Using a single data point allows a clearly picture of the realtionship between rating and weather to be drawn.\n",
     "\n",
+    "Of important note, the purpose of the 3 machine learning models changed throughout the project. The final purpose of the models is more exploratory, with no predicting actually being done on the data. As such, hyperparamter tuning will be ignored, as the model will not be used within the scope of this project to predict anything. Instead, more focus was given to feature selection and iterating through these to find relevant features. The reason for this is to show the relationship between features and rating, proving that there is a relationship. \n",
+    "\n",
     "## Import Packages"
    ]
   },
@@ -853,7 +855,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at the above plot, two distinct zones of temperatures can be seen. This corresponds to the predicted results for the different global january temperatures."
+    "Looking at the above plot, two distinct zones of temperatures can be seen. This corresponds to the predicted results for the different global january temperatures. \n",
+    "\n",
+    "## Different Data \n",
+    "Since there is a difference between the data, to see if the influence of changes in weather across the globe we can split up the data into three models. The first model will be all the data, second model will be the southern hemisphere data and the third model will be the northern hemisphere data."
    ]
   },
   {
@@ -1005,6 +1010,8 @@
     "# Model 2 - Broken Up Data Chunk 1\n",
     "\n",
     "### Selecting Features \n",
+    "\n",
+    "Although we would expect a small jump in the accuracy when we remove conflicting data, the small data set results in a decrease in accuracy when we separate the data. As such, we will refer to the original model with all of the data for the final conclusions. \n",
     "\n",
     "Features need to be changed for each of the new models"
    ]
@@ -1411,7 +1418,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# Visualization "
+    "# Visualization \n",
+    "\n",
+    "These are a few simple visualizations to understand some of the outputs"
    ]
   },
   {
