--- a/06_Machine_Leaning_Model_2.ipynb
+++ b/06_Machine_Leaning_Model_2.ipynb
@@ -12,7 +12,9 @@
     "\n",
     "### This model will look at local changes in rating, using vintage data to justify these changes\n",
     "\n",
-    "Model 2 takes in training dataset 2. This data is filtered to take the all the producers and winetypes from the top 5 districts within the most popular region and countries. The dataset adds a single set of weather data for each district, so many data points with have the same weather data. This approach will look to see the effect of less of weather and more on the influence of other metrics such as price and vintage taste quantifiers. \n",
+    "Model 2 takes in training dataset 2. This data is filtered to take all the producers and winetypes from the top districts within the most popular region and countries. The dataset adds a single set of weather data for each district, so many data points with have the same weather data. This approach will look to see the effect less of weather and more on the influence of other metrics such as price and vintage taste quantifiers. This data takes in the same districts as machine learning model 1, however just expands the amount of wine data used. \n",
+    "\n",
+    "Of important note, the purpose of the 3 machine learning models changed throughout the project. The final purpose of the models is more exploratory, with no predicting actually being done on the data. As such, hyperparamter tuning will be ignored, as the model will not be used within the scope of this project to predict anything. Instead, more focus was given to feature selection and iterating through these to find relevant features. The reason for this is to show the relationship between features and rating, proving that there is a relationship. \n",
     "\n",
     "## Import Packages"
    ]
@@ -1108,7 +1110,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at the above plot, two distinct zones of temperatures can be seen. This corresponds to the predicted results for the different global january temperatures. Looking at the plot, 14°C will be used as the delinator to separate the two chunks of data"
+    "Looking at the above plot, two distinct zones of temperatures can be seen. This corresponds to the predicted results for the different global january temperatures. Looking at the plot, 14°C will be used as the delinator to separate the two chunks of data\n",
+    "\n",
+    "## Different Data \n",
+    "Since there is a difference between the data, to see if the influence of changes in weather across the globe we can split up the data into three models. The first model will be all the data, second model will be the southern hemisphere data and the third model will be the northern hemisphere data."
    ]
   },
   {
@@ -1256,7 +1261,9 @@
     "\n",
     "### Selecting Features \n",
     "\n",
-    "Features need to be changed for each of the new models"
+    "Features need to be changed for each of the new models\n",
+    "\n",
+    "This model shows the influence of the conflicting data points for the weather. As there is a small jump in accuracy when we separate the nothern and southern hemispheres"
    ]
   },
   {
