--- a/07_Machine_Leaning_Model_3.ipynb
+++ b/07_Machine_Leaning_Model_3.ipynb
@@ -16,6 +16,8 @@
     "\n",
     "As a way to internally validate, a completely new model will be create and compared to the Model 1. Accuracy should be similar, and higher as data should remove some of the extreme values predicted to effect the Model 1 data. \n",
     "\n",
+    "Of important note, the purpose of the 3 machine learning models changed throughout the project. The final purpose of the models is more exploratory, with no predicting actually being done on the data. As such, hyperparamter tuning will be ignored, as the model will not be used within the scope of this project to predict anything. Instead, more focus was given to feature selection and iterating through these to find relevant features. The reason for this is to show the relationship between features and rating, proving that there is a relationship. \n",
+    "\n",
     "## Import Packages"
    ]
   },
@@ -868,7 +870,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at the above plot, two distinct zones of temperatures can be seen. This corresponds to the predicted results for the different global january temperatures. Looking at the plot, 14°C will be used as the delinator to separate the two chunks of data"
+    "Looking at the above plot, two distinct zones of temperatures can be seen. This corresponds to the predicted results for the different global january temperatures. Looking at the plot, 14°C will be used as the delinator to separate the two chunks of data.\n",
+    "\n",
+    "Since this third model is being used to compare to the machine learning model 1, we wont split up the data. Additionally, machine learning model 1 showed that when we split up the data, because these models have so few data points, the accuracy decreases signifcantly."
    ]
   },
   {
