--- a/09_Plotly.ipynb
+++ b/09_Plotly.ipynb
@@ -4066,7 +4066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -4191,7 +4191,8 @@
            1,
            "rgb(103,0,13)"
           ]
-         ]
+         ],
+         "showscale": false
         },
         "geo": {
          "center": {},
@@ -5048,7 +5049,8 @@
          }
         },
         "title": {
-         "text": "World Map with Uniform Colors and Dropdown"
+         "text": "Countries and Statistics",
+         "x": 0.5
         },
         "updatemenus": [
          {
@@ -5293,9 +5295,9 @@
           ],
           "direction": "down",
           "showactive": true,
-          "x": 0.5,
+          "x": 0.3,
           "xanchor": "center",
-          "y": 1.15,
+          "y": 1.1,
           "yanchor": "top"
          }
         ]
@@ -5321,7 +5323,7 @@
     "    color=\"Color\",\n",
     "    color_continuous_scale=\"Reds\",\n",
     "    range_color=(0.5, 1.5),\n",
-    "    title=\"World Map with Uniform Colors and Dropdown\",\n",
+    "    title=\"Countries and Statistics\",\n",
     "    hover_data=[\"Country\", \"Statistics\"]\n",
     ")\n",
     "\n",
@@ -5370,16 +5372,19 @@
     "            ],\n",
     "            'direction': 'down',\n",
     "            'showactive': True,\n",
-    "            'x': 0.5,\n",
+    "            'x': 0.3,\n",
     "            'xanchor': 'center',\n",
-    "            'y': 1.15,\n",
-    "            'yanchor': 'top'\n",
+    "            'y': 1.1,\n",
+    "            'yanchor': 'top',\n",
+    "            \n",
     "        }\n",
     "    ]\n",
     ")\n",
     "\n",
     "# Remove margins for better display\n",
     "fig.update_layout(margin=dict(l=0, r=0, t=0, b=0))\n",
+    "fig.update_layout(coloraxis_showscale=False, title_x=0.5)\n",
+    "\n",
     "\n",
     "# Show the plot\n",
     "fig.show()\n",
