--- a/03_Weather_Data.ipynb
+++ b/03_Weather_Data.ipynb
@@ -292,11 +292,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df_file_path = r'C:\\Users\\fwhal\\Downloads\\CME528\\Project\\Repo-2\\BreakinBadCode\\Final_DataFrames'"
+    "final_df_file_path = 'Final_DataFrames'"
    ]
   },
   {
