--- a/06_Final_Model_All_Bottles_Per_District.ipynb
+++ b/06_Final_Model_All_Bottles_Per_District.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
     }
    ],
    "source": [
-    "train = pd.read_csv(r'C:\\Users\\fwhal\\Downloads\\CME528\\Project\\Repo-2\\BreakinBadCode\\Final_DataFrames\\FINAL_training_data_Model2_FINAL.csv')\n",
+    "train = pd.read_csv(r'Final_DataFrames\\FINAL_training_data_Model2_FINAL.csv')\n",
     "train"
    ]
   },
