--- a/04_Training_Dataset.ipynb
+++ b/04_Training_Dataset.ipynb
@@ -500,11 +500,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df_file_path = r'C:\\Users\\fwhal\\Downloads\\CME528\\Project\\Repo-2\\BreakinBadCode\\Final_DataFrames'\n",
+    "final_df_file_path = 'Final_DataFrames'\n",
     "\n",
     "FINAL_wine_df_FINAL = pd.read_csv(os.path.join(final_df_file_path, 'FINAL_wine_df_FINAL.csv'))\n",
     "FINAL_weather_data_FINAL = pd.read_csv(os.path.join(final_df_file_path, 'FINAL_weather_data_FINAL.csv'))\n",
